[gd_scene format=3 uid="uid://cpxyba1kptyss"]

[ext_resource type="PackedScene" uid="uid://upnbb2ag6ca3" path="res://interface/modals/modal_base.tscn" id="1_fpk4o"]
[ext_resource type="Script" uid="uid://cbvsar6kufrq0" path="res://interface/modals/server_password_modal.gd" id="2_rp58b"]

[node name="ServerPasswordModal" unique_id=649999717 instance=ExtResource("1_fpk4o")]
script = ExtResource("2_rp58b")

[node name="VBoxContainer" type="VBoxContainer" parent="Modal/MarginContainer" parent_id_path=PackedInt32Array(1793144273) index="0" unique_id=1972075183]
layout_mode = 2

[node name="Label" type="Label" parent="Modal/MarginContainer/VBoxContainer" index="0" unique_id=1397818910]
unique_name_in_owner = true
layout_mode = 2
text = "Password for ServerName"
horizontal_alignment = 1

[node name="PasswordField" type="LineEdit" parent="Modal/MarginContainer/VBoxContainer" index="1" unique_id=1227107212]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Server password..."
max_length = 128
secret = true

[node name="ErrorLabel" type="Label" parent="Modal/MarginContainer/VBoxContainer" index="2" unique_id=1648831383]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.23000002, 0.31983346, 1)
layout_mode = 2
text = "Incorrect password!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer" index="3" unique_id=1605149251]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CancelButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="0" unique_id=1462452506]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="AuthenticateButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="1" unique_id=1614722883]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Button_Important"
text = "Authenticate"

[connection signal="text_changed" from="Modal/MarginContainer/VBoxContainer/PasswordField" to="." method="_on_password_field_text_changed"]
[connection signal="text_submitted" from="Modal/MarginContainer/VBoxContainer/PasswordField" to="." method="_on_password_field_text_submitted"]
[connection signal="pressed" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/AuthenticateButton" to="." method="_on_authenticate_button_pressed"]
